--- a/food_hub.ipynb
+++ b/food_hub.ipynb
@@ -8,7 +8,7 @@
       "source": [
         "# Project Foundations for Data Science: FoodHub Data Analysis\n",
         "\n",
-        "**Marks: 60**"
+        "**Marks: 60/60**"
       ]
     },
     {
